fixing bug horizontal scroll

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,7 @@ body{
 }
 
 footer{
-    width: 100vw;
+    width: 100%;
     background-color: rgb(190, 190, 190);
     display: flex;
     flex-direction: column;
